# Analisis-Sentimen

./: .gitignore  README.md  pyproject.toml
data/: bpjs_reviews_1.csv  bpjs_reviews_2.csv  bpjs_reviews_3.csv  bpjs_reviews_4.csv  bpjs_reviews_5.csv
notebooks/: model.ipynb
notebooks/tuning_dir/bilstm_sentiment/: oracle.json
notebooks/tuning_dir/bilstm_sentiment/trial_00/: trial.json
notebooks/tuning_dir/bilstm_sentiment/trial_01/: trial.json
notebooks/tuning_dir/bilstm_sentiment/trial_02/: trial.json
notebooks/tuning_dir/bilstm_sentiment/trial_03/: trial.json
notebooks/tuning_dir/bilstm_sentiment/trial_04/: trial.json
notebooks/tuning_dir/bilstm_sentiment/trial_05/: trial.json
notebooks/tuning_dir/bilstm_sentiment/trial_06/: trial.json
notebooks/tuning_dir/bilstm_sentiment/trial_07/: trial.json
notebooks/tuning_dir/bilstm_sentiment/trial_08/: trial.json
notebooks/tuning_dir/bilstm_sentiment/trial_09/: trial.json
notebooks/tuning_dir/bilstm_sentiment/trial_10/: trial.json
notebooks/tuning_dir/bilstm_sentiment/trial_11/: trial.json
notebooks/tuning_dir/bilstm_sentiment/trial_12/: trial.json
notebooks/tuning_dir/bilstm_sentiment/trial_13/: trial.json
notebooks/tuning_dir/bilstm_sentiment/trial_14/: trial.json
notebooks/tuning_dir/bilstm_sentiment/trial_15/: build_config.json  trial.json
notebooks/tuning_dir/bilstm_sentiment/trial_16/: trial.json
notebooks/tuning_dir/bilstm_sentiment/trial_17/: trial.json
notebooks/tuning_dir/untitled_project/: oracle.json
script/: scraping.py
(+12 files in other folders)
