[project]
name = "sentimen-analisis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.15.0",
    "fasttext-wheel>=0.9.2",
    "gensim>=4.4.0",
    "google-play-scraper>=1.2.7",
    "keras>=3.13.2",
    "keras-tuner>=1.4.8",
    "matplotlib>=3.10.8",
    "nlpaug>=1.1.11",
    "nltk>=3.9.3",
    "pandas>=3.0.1",
    "regex>=2026.2.19",
    "requests>=2.32.5",
    "sastrawi>=1.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "stanza>=1.11.0",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "unidecode>=1.4.0",
    "wordcloud>=1.9.6",
]
